# llvm-i286

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LABEL_MANAGEMENT_PLAN.md  MUSL-i286-PORTING.MD  MUSL_COMPILATION_STATUS.md  MUSL_PORT_README.md  NOTES.MD  PLAN.md  PLAN_MUSL_NEXT.md  PRINTF_PORTING_PLAN.md  PROGRESS.md  PROGRESS_UPDATE.md  REFACTORING_PLAN.md  STACK_FRAME_REFACTORING_PLAN.md  build_musl.sh  build_os2.sh  c_testsuite_run.sh  clang_i286  configure_i286.sh  generate_parser.sh  musl_cc.sh
antlr/: LLVMIRBaseVisitor.cpp  LLVMIRBaseVisitor.h  LLVMIRLexer.cpp  LLVMIRLexer.h  LLVMIRParser.cpp  LLVMIRParser.h  LLVMIRVisitor.cpp  LLVMIRVisitor.h
musl_build/: i286-linux-gnu-ar  i286-linux-gnu-ranlib
os2_examples/: OS2API.TXT
os2_examples/asm_count/: core  notes.txt  test.MAP  test.asm  test.def  test.lst  test_count.c  test_count.ll
os2_examples/asm_div/: bt.cmd  core  test.MAP  test.asm  test.cvh  test.lk1  test.lst
os2_examples/asm_hello/: bt.cmd  test.MAP  test.asm  test.lst
os2_examples/asm_hello/backup/: test.asm
os2_examples/asm_hello/test_wlink/: TEST.TR  bt.cmd  tdconfig.tdo  test.MAP  test.asm  test.sym
os2_examples/asm_hello/with_itoa/: test.asm
os2_examples/asm_libtest/: test.MAP  test.asm  test.lk1  test.lst
os2_examples/asm_mul/: bt.cmd  core  test.MAP  test.asm  test.lst
os2_examples/llvm_lib/: bt.cmd  div.asm  itoa.asm  llvm.bak  writestr.asm
os2_glue/: libc_init.c  lockfile.c  stdinit.c
runtime/: build_runtime.sh  div32.asm  div32u.asm  itoa.asm  llvm_stubs.asm  mul32.asm  os2_syscall.asm  printnum.asm  va_intrinsics.c
src/: main.cpp
src/codegen/: Addressing.cpp  Addressing.h  ArithmeticOps.cpp  BitwiseOps.cpp  CallOps.cpp  CodeGen.cpp  CodeGen.h  ControlFlowOps.cpp  ConversionOps.cpp  Emitter.cpp  Emitter.h  FpuOps.cpp  FunctionAnalysis.cpp  FunctionAnalysis.h  InstructionSelect.cpp  InstructionSelect.h  InstructionSelectInternal.h  InstructionSelectUtils.cpp  Location.h  MemoryOps.cpp  NasmSafe.cpp  NasmSafe.h  RegisterAlloc.cpp  RegisterAlloc.h  StackFrame.cpp  StackFrame.h
src/ir/: IrAst.cpp  IrAst.h  IrParser.cpp  IrParser.h  IrVisitor.cpp  IrVisitor.h  OperandRef.cpp  OperandRef.h
src/runtime/: os2_crt.asm  os2_runtime.asm  os2_syscall.asm  runtime32.asm
tests/: run_tests.sh  test_arithmetic.sh  test_parser.sh
tests/integration/: mem_test.ll  return_42.ll  simple_return.ll
tests/os2/: hello.c  output_helper.h  test_add.c  test_add_local.c  test_hello.c  test_isalpha.c  test_memcmp.c  test_mul.c  test_mul32.c  test_mul32_simple.c  test_mul_local.c  test_mul_print.c  test_printf.c  test_printf_companion.c  test_printf_simple.c  test_printnum.c  test_ptrtoint.c  test_return.c  test_strcmp.c  test_strlen.c  test_syscall_basic.c
tests/output/: test1.ll  test2.ll  test3.ll  test4.ll  test5.ll  test_add.ll  test_add_local.ll  test_and.ll  test_const.ll  test_hello.def  test_hello.ll  test_mul.ll  test_mul2.ll  test_mul32.ll  test_mul32_simple.ll  test_mul_local.ll  test_mul_print.ll  test_multi.ll  test_or.ll  test_printf.ll  test_printf_simple.ll  test_printnum.ll  test_return.ll  test_simple.ll  test_sub.ll  test_xor.ll
